# BangerKing

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  compile_objects.sh  exec.sh  grammar.txt  perf.sh  run.sh  test.sh  tests.sh  todo.md
examples/: hello_world.bk  main.bk  main.s
include/: cli.hpp  compiler.hpp  context.hpp  files.hpp  interpreter.hpp  lexer.h  lexer.hpp  miscellaneous.h  miscellaneous.hpp  nodes.h  parser.h  parser.hpp  position.h  position.hpp  run.h  run.hpp  runtime.hpp  symbol_table.hpp  token.h  token.hpp  types.hpp  value.h
include/debug/: compare_tokens.h  compare_tokens.hpp  print_tokens.h  print_tokens.hpp
include/exceptions/: arithmetic_error.hpp  base_runtime_error.hpp  custom_error.h  custom_error.hpp  exception.hpp  expected_char_error.h  expected_char_error.hpp  illegal_char_error.h  illegal_char_error.hpp  illegal_string_error.hpp  invalid_syntax_error.h  invalid_syntax_error.hpp  runtime_error.hpp  type_error.hpp  type_overflow_error.hpp  unclosed_string_error.hpp  undefined_behavior.hpp
include/nodes/: add_node.hpp  and_node.hpp  binary_operation.hpp  boolean_node.hpp  compositer.hpp  custom_node.hpp  define_constant_node.hpp  divide_node.hpp  double_node.hpp  integer_node.hpp  list_node.hpp  minus_node.hpp  modulo_node.hpp  multiply_node.hpp  node_type.hpp  not_node.hpp  number_node.hpp  or_node.hpp  plus_node.hpp  power_node.hpp  string_node.hpp  substract_node.hpp  var_access_node.hpp  var_assignment_node.hpp  var_modify_node.hpp
include/utils/: deallocate_list_of_pointers.h  deallocate_list_of_pointers.hpp  double_to_string.hpp  get_file_size.hpp  read_entire_file.hpp  string_with_arrows.hpp
include/values/: boolean.hpp  compositer.hpp  double.hpp  integer.hpp  list.hpp  string.hpp  value.hpp
logs/: perflog-2024-01-30+17:31:50.md  perflog-2024-01-31+14:28:39.md  perflog-2024-02-02+18:16:22.md  perflog-2024-02-02+23:09:37.md  perflog-2024-02-07+14:53:02.md
src/: cli.cpp  compiler.cpp  context.cpp  files.cpp  interpreter.cpp  lexer.cpp  main.cpp  miscellaneous.cpp  parser.cpp  position.cpp  run.cpp  runtime.cpp  symbol_table.cpp  token.cpp  types.cpp
src/debug/: compare_tokens.cpp  print_tokens.cpp
src/exceptions/: arithmetic_error.cpp  base_runtime_error.cpp  custom_error.cpp  exception.cpp  expected_char_error.cpp  illegal_char_error.cpp  illegal_string.cpp  invalid_syntax_error.cpp  runtime_error.cpp  type_error.cpp  type_overflow.cpp  unclosed_string_error.cpp  undefined_behavior.cpp
src/nodes/: add_node.cpp  and_node.cpp  binary_operation.cpp  boolean_node.cpp  custom_node.cpp  define_constant_node.cpp  divide_node.cpp  double_node.cpp  integer_node.cpp  list_node.cpp  minus_node.cpp  modulo_node.cpp  multiply_node.cpp  not_node.cpp  number_node.cpp  or_node.cpp  plus_node.cpp  power_node.cpp  string_node.cpp  substract_node.cpp  var_access_node.cpp  var_assignment_node.cpp  var_modify_node.cpp
src/utils/: double_to_string.cpp  get_file_size.cpp  (+2 more)
tests/: 0-context.test.cpp  0-miscellaneous.test.cpp  0-positions.test.cpp  0-runtime.test.cpp  0-symbol-table.test.cpp  1-tokens.test.cpp  2-lexer.test.cpp  3-parser.test.cpp  4-compiler.test.cpp  4-values.test.cpp  5-interpreter.test.cpp  6-run.test.cpp  helper.h  helper.hpp  tests_main.cpp
(+15 files in other folders)
